# duckpie

./: README.md  pyproject.toml
notebooks/: chinook.sqlite  fastlite_index.ipynb  initial_attempt.ipynb
